flail around trying to fix overflowing input box on Firefox

--- a/popup/actions.css
+++ b/popup/actions.css
@@ -1,7 +1,3 @@
-html {
-    width: 19em
-}
-
 /* VALIDATION AND FEEDBACK */
 .hidden {
     display: none;
@@ -46,6 +42,7 @@ html {
 body {
     /* background-color: #680c0c; */
     font-family: 'Roboto', sans-serif;
+    width: 22em;
 }
 p {
     font-size: 1.5em;
@@ -53,8 +50,11 @@ p {
     margin-block-end:   0.5em;
 }
 input {
+    /* clear Chrome injected style */
     outline: none;
     border: none;
+
+    /* styling */
     text-transform: uppercase;
     padding: 0.4em 0.2em 0em 0.2em;
     font-size: 2em;
@@ -62,6 +62,10 @@ input {
     border-top-right-radius: 2px;
     border-bottom: 2px solid #223945;
     background-color: #dbdbdb;
+
+    /* sizing */
+    box-sizing: border-box;
+    width: 100%
 }
 input:hover{
     background-color: #c4d7e0;
